# imu-tilt-detection

./: CMakeLists.txt  README.md  notes.txt
include/imu_tilt_detection/: complementary_filter.h  complementary_tilt_detector.h  tilt_detector.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/imu_tilt_detection/include/imu_tilt_detection/imu_tilt_detection/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  tilt_status.h
install/imu_tilt_detection/include/imu_tilt_detection/imu_tilt_detection/msg/detail/: tilt_status__functions.c  tilt_status__functions.h  tilt_status__rosidl_typesupport_fastrtps_cpp.hpp  tilt_status__struct.h  tilt_status__traits.hpp
install/imu_tilt_detection/lib/imu_tilt_detection/: tilt_publisher
install/imu_tilt_detection/share/ament_index/resource_index/package_run_dependencies/: imu_tilt_detection
install/imu_tilt_detection/share/ament_index/resource_index/parent_prefix_path/: imu_tilt_detection
install/imu_tilt_detection/share/imu_tilt_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/imu_tilt_detection/share/imu_tilt_detection/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_imu_tilt_detection__rosidl_generator_cExport-noconfig.cmake  export_imu_tilt_detection__rosidl_generator_pyExport.cmake  export_imu_tilt_detection__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_imu_tilt_detection__rosidl_typesupport_fastrtps_cppExport.cmake  imu_tilt_detection__rosidl_typesupport_cExport-noconfig.cmake  imu_tilt_detection__rosidl_typesupport_introspection_cExport-noconfig.cmake  imu_tilt_detection__rosidl_typesupport_introspection_cppExport-noconfig.cmake  imu_tilt_detection__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/imu_tilt_detection/share/imu_tilt_detection/msg/: TiltStatus.idl  TiltStatus.json  TiltStatus.msg
log/: latest_build  latest_test  latest_test-result
recorded_output/: metadata.yaml  rosbag2_2023_07_19-20_57_17_0.mcap
recorded_output/rosbag2_2023_07_20-17_07_40/: metadata.yaml  rosbag2_2023_07_20-17_07_40_0.mcap
recorded_output/rosbag2_2023_07_20-17_14_41/: metadata.yaml  rosbag2_2023_07_20-17_14_41_0.mcap
recorded_output/rosbag2_2023_10_04-17_44_58/: metadata.yaml  rosbag2_2023_10_04-17_44_58_0.mcap
recorded_output/rosbag2_2023_10_04-18_47_42/: metadata.yaml  rosbag2_2023_10_04-18_47_42_0.mcap
recorded_output/rosbag2_2023_10_04-19_23_22/: metadata.yaml
recorded_output/shaking_and_tilting_robot_bag/: rosbag2_2023_07_19-10_48_43_0.mcap
shaking_and_tilting_robot_bag/: metadata.yaml
src/: complementary_filter.cpp  complementary_tilt_detector.cpp  tilt_detector.cpp  tilt_publisher.cpp
test/: tilt_detector_test.cpp
